--- a/credentials.html
+++ b/credentials.html
@@ -3,9 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Credentials</title>
+    <title>SweetSwipe-Credentials</title>
+    <link rel="stylesheet" href="credentials.css">
 </head>
 <body>
-    
+    <!-- making a single flex box for dividing page into two parts -->
+    <div class="flex">
+        <img src="assets/Colorful_Illustrative_Candy_Shop_Logo-removebg-preview.png" alt="logo" height="550px" width="550px">
+        <!-- credential input and level selection button -->
+        <div id="box">
+            <input type="text" class="samebox" name="username" placeholder="Enter Name">
+            <input type="text" class="samebox" name="username" placeholder="Enter Nickame">
+            <select id="level" name="level" class="samebox">
+                <option value="easy">Easy</option>
+                <option value="medium">Medium</option>
+                <option value="hard">Hard</option>
+            </select>
+            <p id="start" class="samebox">Start</p>
+        </div>
+    </div>
 </body>
+<script src="credentials.js"></script>
 </html>
