--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img src="assets/Colorful_Illustrative_Candy_Shop_Logo-removebg-preview.png" alt="">
-    <span>Play</span>
+    <!-- adding image and play button -->
+    <img src="assets/Colorful_Illustrative_Candy_Shop_Logo-removebg-preview.png" alt="logo">
+    <p id="playbtn">Play</p>
 </body>
+<script src="app.js"></script>
 </html>
