--- a/instruction.html
+++ b/instruction.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SweetSwipe-Instruction</title>
+    <link rel="stylesheet" href="instruction.css">
 </head>
 <body>
-    
+    <img src="assets/Colorful_Illustrative_Candy_Shop_Logo-removebg-preview.png" alt="" width="150px" height="150px">
+    <div id="instruction">
+        <h1>Instructions!</h1>
+        1. Touch or swipe candies to move them around. <br>
+        2. Put three or more candies of the same color together. <br>
+        3. Do what the game tells you to do, like getting a certain score or making special candies. <br>
+        4. If you make special candies, they do cool things! <br>
+        5. Keep doing these things to go to new levels and see more fun candies! <br>
+    </div>
+    <button>Let's Crush</button>
 </body>
 </html>
