--- a/instruction.html
+++ b/instruction.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <img src="assets/Colorful_Illustrative_Candy_Shop_Logo-removebg-preview.png" alt="" width="150px" height="150px">
+    <!-- adding instructions -->
     <div id="instruction">
         <h1>Instructions!</h1>
         1. Touch or swipe candies to move them around. <br>
@@ -16,6 +17,8 @@
         4. If you make special candies, they do cool things! <br>
         5. Keep doing these things to go to new levels and see more fun candies! <br>
     </div>
-    <button>Let's Crush</button>
+    <!-- add let's crush button -->
+    <button id="crush">Let's Crush</button>
 </body>
+<script src="instruction.js"></script>
 </html>
