--- a/game.html
+++ b/game.html
@@ -7,7 +7,13 @@
     <link rel="stylesheet" href="game.css">
 </head>
 <body>
-    
+    <div id="info-screen" class="flex">
+        <p class="flex">High Score: 0</p>
+        <img src="assets/Colorful_Illustrative_Candy_Shop_Logo-removebg-preview.png" alt="logo"  >
+        <p class="flex">Moves Left: 0</p>
+        <p class="flex">Your Score: 0</p>
+    </div>
+    <div id="game-screen"></div>
 </body>
 <script src="game.js"></script>
 </html>
