--- a/game.html
+++ b/game.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="game.css">
 </head>
 <body>
+    <!-- making different divs for diffrent section  -->
     <div id="info-screen" class="flex">
         <p class="flex">High Score: 0</p>
         <img src="assets/Colorful_Illustrative_Candy_Shop_Logo-removebg-preview.png" alt="logo"  >
@@ -14,6 +15,9 @@
         <p class="flex">Your Score: 0</p>
     </div>
     <div id="game-screen"></div>
+    <div id="target">
+        <p class="flex">Target: 999</p>
+    </div>
 </body>
 <script src="game.js"></script>
 </html>
