--- a/credentials.html
+++ b/credentials.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SweetSwipe-Credentials</title>
     <link rel="stylesheet" href="credentials.css">
+    <link rel="icon" href="assets/Colorful_Illustrative_Candy_Shop_Logo-removebg-preview.png" type="image/png">
+
 </head>
 <body>
     <!-- making a single flex box for dividing page into two parts -->
@@ -12,15 +14,16 @@
         <img src="assets/Colorful_Illustrative_Candy_Shop_Logo-removebg-preview.png" alt="logo" height="550px" width="550px">
         <!-- credential input and level selection button -->
         <div id="box">
-            <input type="text" class="samebox" name="username" placeholder="Enter Name">
-            <input type="text" class="samebox" name="username" placeholder="Enter Nickame" >
-            <select id="level" name="level" class="samebox">
-                <option value="easy">Easy</option>
-                <option value="medium">Medium</option>
-                <option value="hard">Hard</option>
-            </select>
-            <p id="start" class="samebox">Start</p>
-        </div>
+                <input type="text" class="samebox" name="username" placeholder="Enter Name" required>
+                <input type="text" class="samebox" name="nickname" placeholder="Enter Nickname" required>
+                <select id="level" name="level" class="samebox" required>
+                    <option value="easy">Easy</option>
+                    <option value="medium">Medium</option>
+                    <option value="hard">Hard</option>
+                </select>
+                <button id="start" class="samebox">Start</button>
+  </div>
+        
     </div>
 </body>
 <script src="credentials.js"></script>
