--- a/game.html
+++ b/game.html
@@ -5,10 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SweetSwipe-Game</title>
     <link rel="stylesheet" href="game.css">
+    <link rel="icon" href="assets/Colorful_Illustrative_Candy_Shop_Logo-removebg-preview.png" type="image/png">
+
 </head>
 <body>
     <!-- making different divs for diffrent section  -->
     <div id="info-screen" class="flex">
+        
         <p class="flex">High Score: 0</p>
         <img src="assets/Colorful_Illustrative_Candy_Shop_Logo-removebg-preview.png" alt="logo"  >
         <p class="flex">Moves Left: 0</p>
