--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SweetSwipe</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="assets/Colorful_Illustrative_Candy_Shop_Logo-removebg-preview.png" type="image/png">
 </head>
 <body>
     <!-- adding image and play button -->
