--- a/result.html
+++ b/result.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SweetSwipe-Result</title>
     <link rel="stylesheet" href="result.css">
+    <link rel="icon" href="assets/Colorful_Illustrative_Candy_Shop_Logo-removebg-preview.png" type="image/png">
+
 </head>
 <body>
     <img src="assets/logo cropped.png" alt="logo" >
