--- a/instruction.html
+++ b/instruction.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SweetSwipe-Instruction</title>
     <link rel="stylesheet" href="instruction.css">
+    <link rel="icon" href="assets/Colorful_Illustrative_Candy_Shop_Logo-removebg-preview.png" type="image/png">
+
 </head>
 <body>
     <img src="assets/Colorful_Illustrative_Candy_Shop_Logo-removebg-preview.png" alt="" width="150px" height="150px">
