--- a/credentials.html
+++ b/credentials.html
@@ -9,6 +9,9 @@
 
 </head>
 <body>
+    <audio id="backgroundMusic" autoplay loop>
+        <source src="assets/bgmusic.mp3" type="audio/mp3">
+    </audio>
     <!-- making a single flex box for dividing page into two parts -->
     <div class="flex">
         <img src="assets/Colorful_Illustrative_Candy_Shop_Logo-removebg-preview.png" alt="logo" height="550px" width="550px">
