--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <link rel="icon" href="assets/Colorful_Illustrative_Candy_Shop_Logo-removebg-preview.png" type="image/png">
 </head>
 <body>
+    <audio id="bgMusic" autoplay loop>
+        <!-- Provide the path to your audio file -->
+        <source src="assets/bgm1.mp3" type="audio/mp3">
+        nil
+      </audio>
     <!-- adding image and play button -->
     <img src="assets/Colorful_Illustrative_Candy_Shop_Logo-removebg-preview.png" alt="logo">
     <p id="playbtn">Play</p>
