--- a/game.html
+++ b/game.html
@@ -13,7 +13,7 @@
     <div id="info-screen" class="flex">
         
         <p class="flex">High Score: 0</p>
-        <img src="assets/Colorful_Illustrative_Candy_Shop_Logo-removebg-preview.png" alt="logo"  >
+        <img src="assets/Colorful_Illustrative_Candy_Shop_Logo-removebg-preview.png" id="logo" alt="logo"  >
         <p class="flex">Moves Left: 0</p>
         <p class="flex">Your Score: 0</p>
     </div>
