--- a/credentials.html
+++ b/credentials.html
@@ -16,18 +16,23 @@
     <div class="flex">
         <img src="assets/Colorful_Illustrative_Candy_Shop_Logo-removebg-preview.png" alt="logo" height="550px" width="550px">
         <!-- credential input and level selection button -->
+        <!-- Wrap the inputs and button inside a form -->
+    <form id="credentialsForm" action="instruction.html">
         <div id="box">
-                <input type="text" class="samebox" name="username" placeholder="Enter Name" required>
-                <input type="text" class="samebox" name="nickname" placeholder="Enter Nickname" required>
-                <select id="level" name="level" class="samebox" required>
-                    <option value="easy">Easy</option>
-                    <option value="medium">Medium</option>
-                    <option value="hard">Hard</option>
-                </select>
-                <button id="start" class="samebox">Start</button>
-  </div>
+            <input type="text" class="samebox" name="username" placeholder="Enter Name" required> <br>
+            <input type="text" class="samebox" name="nickname" placeholder="Enter Nickname" required> <br>
+            <select id="level" name="level" class="samebox" required>
+                <option value="easy">Easy</option>
+                <option value="medium">Medium</option>
+                <option value="hard">Hard</option>
+            </select>
+             <button type="submit" id="start" class="samebox">Start</button>
+        </div>
+    </form>
+
         
     </div>
 </body>
 <script src="credentials.js"></script>
+<script src="game.js"></script>
 </html>
