--- a/game.html
+++ b/game.html
@@ -12,14 +12,14 @@
     <!-- making different divs for diffrent section  -->
     <div id="info-screen" class="flex">
         
-        <p class="flex">High Score: 0</p>
+        <p class="flex">High Score: <span id="highscore">0</span></p>
         <img src="assets/Colorful_Illustrative_Candy_Shop_Logo-removebg-preview.png" id="logo" alt="logo"  >
-        <p class="flex">Moves Left: 0</p>
-        <p class="flex">Your Score: 0</p>
+        <p class="flex">Moves Left: <span id="moves">10</span></p>
+        <p class="flex">Your Score: <span id="score">0</span></p>
     </div>
     <div id="game-screen"></div>
     <div id="target">
-        <p class="flex">Target: 999</p>
+        <p class="flex">Target: <span id="targetscore"> 999</span></p>
     </div>
 </body>
 <script src="game.js"></script>
