--- a/credentials.html
+++ b/credentials.html
@@ -12,6 +12,7 @@
     <audio id="backgroundMusic" autoplay loop>
         <source src="assets/bgmusic.mp3" type="audio/mp3">
     </audio>
+    
     <!-- making a single flex box for dividing page into two parts -->
     <div class="flex">
         <img src="assets/Colorful_Illustrative_Candy_Shop_Logo-removebg-preview.png" alt="logo" height="550px" width="550px">
@@ -20,7 +21,7 @@
     <form id="credentialsForm" action="instruction.html">
         <div id="box">
             <input type="text" class="samebox" name="username" placeholder="Enter Name" required> <br>
-            <input type="text" class="samebox" name="nickname" placeholder="Enter Nickname" required> <br>
+            <input type="text" class="samebox" id="nickname" name="nickname" placeholder="Enter Nickname" required> <br>
             <select id="level" name="level" class="samebox" required>
                 <option value="easy">Easy</option>
                 <option value="medium">Medium</option>
