--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
     <link rel="icon" href="assets/Colorful_Illustrative_Candy_Shop_Logo-removebg-preview.png" type="image/png">
 </head>
 <body>
-    <audio id="bgMusic" autoplay loop>
-        <!-- Provide the path to your audio file -->
-        <source src="assets/bgm1.mp3" type="audio/mp3">
+    <audio id="bgMusic" loop>
+         <source src="assets/bgm1.mp3" type="audio/mp3"> 
         nil
       </audio>
     <!-- adding image and play button -->
