--- a/result.html
+++ b/result.html
@@ -9,8 +9,12 @@
 
 </head>
 <body>
+    <audio id="sugarcrush" >
+        <source src="assets/candy-crush-announcer-sugar-crush-sound-effect.wav" type="audio/wav"> 
+       nil
+     </audio>
     <img src="assets/logo cropped.png" alt="logo" >
-    <p id="message"></p>
+    <p id="message">:</p>
     <button id="restart"> Restart Game</button>
 </body>
 <script src="result.js"></script>
