--- a/game.html
+++ b/game.html
@@ -9,13 +9,20 @@
 
 </head>
 <body>
+    <audio id="bgMusic" loop>
+        <source src="assets/gamescreenbgm.mp3" type="audio/mp3"> 
+       
+     </audio>
+     <audio id="blast">
+        <source src="assets/colour-bomb-created.mp3" type="audio/mp3">
+    </audio>
     <!-- making different divs for diffrent section  -->
     <div id="info-screen" class="flex">
         
         <p class="flex">High Score: <span id="highscore">0</span></p>
         <img src="assets/Colorful_Illustrative_Candy_Shop_Logo-removebg-preview.png" id="logo" alt="logo"  >
         <p class="flex">Moves Left: <span id="moves">10</span></p>
-        <p class="flex">Your Score: <span id="score">0</span></p>
+        <p class="flex">Your Score: <span id="score"></span></p>
     </div>
     <div id="game-screen"></div>
     <div id="target">
