--- a/instruction.html
+++ b/instruction.html
@@ -14,10 +14,11 @@
     <div id="instruction">
         <h1>Instructions!</h1>
         1. Touch or swipe candies to move them around. <br>
-        2. Put three or more candies of the same color together. <br>
-        3. Do what the game tells you to do, like getting a certain score or making special candies. <br>
-        4. If you make special candies, they do cool things! <br>
-        5. Keep doing these things to go to new levels and see more fun candies! <br>
+        2. Put three of the same color together. <br>
+        3. Do what the game tells you to do, like getting a certain score. <br>
+        4. Always keep an eye on Moves Left and Target <br>
+        5. You are always welcome to play game again <br>
+        6. You will get 10 points if you'll crush three candies.
     </div>
     <!-- add let's crush button -->
     <button id="crush">Let's Crush</button>
