--- a/game.html
+++ b/game.html
@@ -18,15 +18,20 @@
     </audio>
     <!-- making different divs for diffrent section  -->
     <div id="info-screen" class="flex">
+        <p class="flex" id="nickname"></p>
+        <p class="flex samewidth">High Score: <span id="highscore">0</span></p>
+        <img src="assets/Colorful_Illustrative_Candy_Shop_Logo-removebg-preview.png" id="logo" alt="logo" width="300px" height="300px" >
+        <p class="flex samewidth">Moves Left: <span id="moves">10</span></p>
+        <p class="flex samewidth">Your Score: <span id="score"></span></p>
         
-        <p class="flex">High Score: <span id="highscore">0</span></p>
-        <img src="assets/Colorful_Illustrative_Candy_Shop_Logo-removebg-preview.png" id="logo" alt="logo"  >
-        <p class="flex">Moves Left: <span id="moves">10</span></p>
-        <p class="flex">Your Score: <span id="score"></span></p>
+
     </div>
-    <div id="game-screen"></div>
-    <div id="target">
+    <div id="game-screen">
+    </div>
+    <div id="target" class="flex">
+        
         <p class="flex">Target: <span id="targetscore"> 999</span></p>
+        <img src="assets/girl_imgfinal.png" alt="girl" id="girl">
     </div>
 </body>
 <script src="game.js"></script>
