--- a/result.html
+++ b/result.html
@@ -15,7 +15,10 @@
      </audio>
     <img src="assets/logo cropped.png" alt="logo" >
     <p id="message">:</p>
-    <button id="restart"> Restart Game</button>
+    <div id="buttons">
+    <button id="restart">Restart</button>
+    <button id="home">Home   </button>
+</div>
 </body>
 <script src="result.js"></script>
 </html>
