--- a/instruction.html
+++ b/instruction.html
@@ -18,7 +18,8 @@
         3. Do what the game tells you to do, like getting a certain score. <br>
         4. Always keep an eye on Moves Left and Target <br>
         5. You are always welcome to play game again <br>
-        6. You will get 10 points if you'll crush three candies.
+        6. You will get 10 points if you'll crush three candies. <br>
+        7. You can only swap if three same candies are present.
     </div>
     <!-- add let's crush button -->
     <button id="crush">Let's Crush</button>
